tests/integration/snapshots/integration__commands__format__uglify_ARRAY_NUMERIC_MATRIX_HETEROGENEOUS.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 0
success: true
stdin ---
[[1, null], [1, null], [null], [0], [false], [""]]
stdout ---
[[1,null],[1,null],[null],[0],[false],[""]]

stderr ---
