tests/integration/snapshots/integration__commands__format__uglify_ARRAY_NUMERIC_MATRIX_SHORT.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 0
success: true
stdin ---
[[1,2,3],[4,5,6]]
stdout ---
[[1,2,3],[4,5,6]]

stderr ---
