tests/integration/snapshots/integration__commands__format__uglify_ARRAY_STRING_LONGER_THAN_PRINT_WIDTH.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 0
success: true
stdin ---
["this string is way way way way way way way way way way way way way way too long"]
stdout ---
["this string is way way way way way way way way way way way way way way too long"]

stderr ---
